--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
-    <p>For next steps, read the AWS CodePipeline Documentation. Incedge 2020</p>
+    <h2>YOU HAVE WON A LOTTERY WORTH 100000000000000000000000000000!</h2>
+    <p>claim it now!</p>
   </div>
 </body>
 </html>
