--- a/index.html
+++ b/index.html
@@ -1,24 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Tiny Card</title>
+  <title>Sanika Mane</title>
   <style>
-    body{margin:0;display:flex;min-height:100vh;align-items:center;justify-content:center;background:#0b1220;font-family:system-ui,Segoe UI,Roboto;color:#e6eef8}
-    .card{width:320px;padding:16px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));box-shadow:0 8px 24px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
-    h3{margin:0 0 6px;font-size:18px}
-    p{margin:0 0 12px;color:#9fb0c8;font-size:13px}
-    .btn{display:inline-block;padding:8px 12px;border-radius:10px;background:#7c5cff;color:#fff;text-decoration:none;font-weight:600}
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: linear-gradient(135deg, #007f3f, #004d26);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      max-width: 500px;
+      width: 90%;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    h2 {
+      margin: 10px 0;
+      font-size: 1.3rem;
+      font-weight: normal;
+      color: #d9f7e5;
+    }
+    p {
+      font-size: 1rem;
+      color: #f0f0f0;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 18px;
+      background: #fff;
+      color: #007f3f;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.2s;
+    }
+    .btn:hover {
+      background: #e2e2e2;
+    }
   </style>
 </head>
 <body>
   <div class="card">
-    <h3>Tiny Attractive Card</h3>
-    <p>Compact, responsive, and dependency-free — perfect as a snippet or profile card.</p>
-    <a class="btn" href="#" onclick="alert('Hello!')">Click me</a>
+    <h1>Sanika Mane</h1>
+    <h2>Information Technology Student @ SFIT</h2>
+    <p>I’m passionate about IT for good governance, building projects that make information and opportunities accessible to everyone.</p>
+    <a href="mailto:youremail@example.com" class="btn">Contact Me</a>
   </div>
 </body>
 </html>
+
 
 
